core: Remove ServiceAlerts (#2)
Just use the link to the main website. Parsing it is too fragile for
this.
